mailhog/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailhog-ingress
  namespace: test-istio
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "$ACTIVATE_TLS"
spec:
  rules:
  - host: "mailhog-ingress.$ISTIO_BASIC_URL"
    http:
      paths:
      - path: /
        backend:
          serviceName: mailhog
          servicePort: 8025
  tls:
    - secretName: mailhog-ingress-pcd-2019
      hosts: ["mailhog-ingress.$ISTIO_BASIC_URL"]
